# aoc2024

./: .gitignore  CMakeLists.txt
src/: AoC.hpp  Day1.cpp  Day2.cpp  Day3.cpp  Day4.cpp  Day5.cpp  Day6.cpp  Day7.cpp  Utilities.cpp  Utilities.hpp
